--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
   background-color: rgba(255, 99, 71, 0.5); 
   font-family: "Lobster", serif;
   font-size: 50px;
+  text-align:center;
+  text-transform: uppercase;
 }
 
 .email{
   color: grey;
-  font-size: 15px
+  font-size: 15px;
+  text-align: center;
 }
 
 .secondary-front {
